--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
               <div class="list-item pt-5" >
                   <h2>Lista elementi Selezionati</h2>
                 <div class="list-group-item d-flex align-items-center py-3 box-my" v-for="(elemento,i) in listaElementiSelezionati()">
-                    <div class="list-group-item-border" ></div>
+                    <div class="list-group-item-border" :style="`background-color: `+elemento.color+`;`"></div>
                     <input class="form-check-input me-2 " type="checkbox" >
                     
 
-                    ciao
+                    {{elemento.text}}
                     
-                    <button type="button" class="btn-close ms-auto" aria-label="Close" @click="deleteElement(i)"></button>
+                    <button type="button" class="btn-close ms-auto" aria-label="Close" @click="deleteElementFromDeleteList(i)"></button>
                   </div>
               </div>
 
